--- a/src/app/feature/components/layout-cliente/layout-cliente.component.html
+++ b/src/app/feature/components/layout-cliente/layout-cliente.component.html
@@ -6,11 +6,14 @@
   <title>Ambiefac school</title>
 </head>
 <body>
-  <nav class="w-full h-[90px] p-0">
+  <nav class="w-full ">
     <app-navbar-client class="w-full h-full"></app-navbar-client>
   </nav>
     <section class="w-full">
       <ng-content ></ng-content>
     </section>
+    <footer>
+      <app-footer></app-footer>
+    </footer>
 </body>
 </html>
