--- a/src/app/feature/components/navbar-client/navbar-client.component.html
+++ b/src/app/feature/components/navbar-client/navbar-client.component.html
@@ -1,18 +1,25 @@
-<section class="w-full flex justify-around items-center border shadow-md bg-green-500 text-white">
-  <div class="w-[10%] flex justify-center items-center">
-    <img src="assets/AMBIEFAC_LOGO.png" alt="logo" width="90">
+<section class="w-full flex justify-around items-center border shadow-md bg-[#fff] text-white">
+  <div class="w-[10%] h-[50px] flex justify-center items-center  my-2">
+    <img src="assets/AMBIEFAC_LOGO.png" alt="logo" width="70">
   </div>
-  <div  class="w-[75%] h-[50px] flex border-r-2 justify-end items-center">
-    <div class="mr-4  w-[85px] h-full flex justify-center items-center
-     hover:text-[#c8c9c8] "
-     [class.my-learning]="isMyLearningRoute">
-      <button  class="w-full">Mis cursos</button>
+  <div class="border-r-2  text-black w-[12%]">
+    <button class="border-2 rounded-1 w-[70%] h-[40px] flex flex-row items-center justify-around">
+       <i class="fa-solid fa-braille"></i>
+       <span>Explorar</span>
+       <i class="fa-solid fa-chevron-down"></i>
+       </button>
+  </div>
+  <div class="w-[75%] h-[50px] flex border-r-2 justify-end items-center ">
+    <div class="mr-4  w-[85px] h-full flex justify-center items-center text-[#808080] hover:text-[#33cc57] "
+      [class.my-learning]="isMyLearningRoute">
+      <button class="w-full ">Mis cursos</button>
     </div>
   </div>
   <div class="w-[15%] flex h-[70px] justify-center items-center">
     <button class="flex items-center gap-3 ">
-      <img class="mb-1" src="assets/usuario.png" alt="" width="45">
-      <label class="text-[1.1rem]" for="">Esteban Alfonso</label>
+      <!--<img class="mb-1" src="assets/usuario.png" alt="" width="45"> -->
+      <svg fill="#808080" width="50" height="50" viewBox="0 0 256 256" id="Flat" xmlns="http://www.w3.org/2000/svg" stroke="#808080"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path d="M228,128A100,100,0,1,0,60.71,201.90967a3.97048,3.97048,0,0,0,.842.751,99.79378,99.79378,0,0,0,132.8982-.00195,3.96558,3.96558,0,0,0,.83813-.74756A99.76267,99.76267,0,0,0,228,128ZM36,128a92,92,0,1,1,157.17139,64.87207,75.616,75.616,0,0,0-44.50782-34.04053,44,44,0,1,0-41.32714,0,75.61784,75.61784,0,0,0-44.50782,34.04A91.70755,91.70755,0,0,1,36,128Zm92,28a36,36,0,1,1,36-36A36.04061,36.04061,0,0,1,128,156ZM68.86475,198.417a68.01092,68.01092,0,0,1,118.27.00049,91.80393,91.80393,0,0,1-118.27-.00049Z"></path> </g></svg>
+      <label class="text-[#808080] hover:text-[#33cc57] cursor-pointer" for="">Esteban Alfonso</label>
     </button>
   </div>
 </section>
