--- a/src/app/feature/academy/learning/components/course/course.component.html
+++ b/src/app/feature/academy/learning/components/course/course.component.html
@@ -1,5 +1,5 @@
 <app-layout-learning>
   <app-sidenav-learning>
-    
+    <app-course-content></app-course-content>
   </app-sidenav-learning>
 </app-layout-learning>
