--- a/src/app/feature/auth/login/login.component.html
+++ b/src/app/feature/auth/login/login.component.html
@@ -7,7 +7,7 @@
                 <span class="input-group-addon">
                     <i class="fa fa-envelope"></i>
                 </span>
-                <input type="email" class="form-control-1" placeholder="Ingrese su correo" formControlName="email">
+                <input type="email" class="form-control-1" placeholder="Ingrese su correo" formControlName="username">
                 <div *ngIf="campoTieneError('email')" placement="top" ngbTooltip="Correo electrónico no válido">
                     <i class="fa fa-exclamation-triangle text-danger"></i>
                 </div>
