--- a/src/app/feature/components/navbar-learning/navbar-learning.component.html
+++ b/src/app/feature/components/navbar-learning/navbar-learning.component.html
@@ -3,7 +3,7 @@
     <img src="assets/AMBIEFAC_LOGO.png" alt="" width="83">
   </div>
   <div class="w-[86%] mt-3    flex items-center justify-start">
-    <h1 class="indent-5 border-l-2">Title course</h1>
+    <h1 class="indent-5 border-l-2">{{title}}</h1>
   </div>
   <div class="w-[5%] flex bg-green-700 justify-center items-center">
     <Button ><img src="assets/cerrar.png" alt="" width="22"></Button>
