--- a/src/app/feature/components/sidenav-learning/sidenav-learning.component.html
+++ b/src/app/feature/components/sidenav-learning/sidenav-learning.component.html
@@ -1,23 +1,23 @@
 <section class="w-full flex justify-around h-screen mt-2">
-<div class="w-[29%] overflow-y-auto shadow-sm bg-white">
-  <div class="w-full h-[70px] flex justify-center font-bold items-center border-b-2">
-    <h1 class="font-bold">Subtopics</h1>
+  
+<div [ngClass]="{'w-[29%]': isMenuExpanded, 'w-[5%]': !isMenuExpanded}" class="w-[29%] overflow-y-auto shadow-sm bg-white">
+  <div *ngIf="isMenuExpanded"  class="w-full h-[70px] flex justify-center font-bold items-center border-b-2">
+    <h1 class="font-bold">Subtopics</h1>  
+    
   </div>
-	<div *ngFor="let data of data" 
-  class="grid border-b-2 w-[95%] mx-auto">
-		<div class="py-[2rem]">
+	<div  *ngFor="let topic of curso.topics" 
+  class="grid border-b-2 w-[95%] mx-auto" >
+		<div *ngIf="isMenuExpanded" class="py-[2rem]">
 			<details class="group">
 				<summary class="flex justify-between items-center font-medium cursor-pointer list-none">
-					<span class="indent-5"> {{data.name}}</span>
+					<span class="indent-5">{{topic.name}}</span>
 					<span class="transition group-open:rotate-180">
                 <svg fill="none" height="24" shape-rendering="geometricPrecision" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" viewBox="0 0 24 24" width="24"><path d="M6 9l6 6 6-6"></path>
-</svg>
+          </svg>
               </span>
 				</summary>
 				<ul class="mt-3 w-full flex flex-col gap-2">
-          <li>tema1</li>
-          <li>tema2</li>
-          <li>tema 3</li>
+          <li (click)="seleccionarInformacion(subtopic.informations)" *ngFor="let subtopic of subtopics">{{subtopic.nameSubtopic}}</li>
         </ul>
 			</details>
 		</div>
@@ -25,7 +25,15 @@
 	
 	</div>
 </div>
-<div class="w-[70%] h-screen rounded-md overflow-y-auto border shadow-sm bg-white">
-  <ng-content></ng-content>  
+<button (click)="toggleMenu()" class="p-2 cursor-pointer">
+  <svg fill="none" height="24" shape-rendering="geometricPrecision" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" viewBox="0 0 24 24" width="24">
+    <path *ngIf="isMenuExpanded; else menuIcon" d="M6 9l6 6 6-6"></path>
+    <ng-template #menuIcon>
+      <path d="M4 6h16M4 12h16M4 18h16"></path>
+    </ng-template>
+  </svg>
+</button>
+<div [ngClass]="{'w-[70%]': isMenuExpanded, 'w-full': !isMenuExpanded}" class="w-[70%] h-screen rounded-md overflow-y-auto border shadow-sm bg-white">
+  <ng-content ></ng-content>  
 </div>
 </section>
