--- a/src/app/feature/components/sidenav-admin/sidenav-admin.component.html
+++ b/src/app/feature/components/sidenav-admin/sidenav-admin.component.html
@@ -7,7 +7,7 @@
           <img src="../../../../assets/AMBIEFAC_LOGO.png" class="w-[54px] " alt="">
         </div>
         <ul class="mt-6 space-y-2 tracking-wide pl-[6px]">
-          <li class="min-w-max" *ngFor="let link of sidebarLinks">
+          <li class="min-w-max" *ngFor="let link of sidebarLinks" (click)="navigateTo(link.route)">
             <a  class="bg group flex items-center space-x-4 rounded-full  py-3 text-gray-600" 
             (click)="selectLink(link)"
             [ngClass]="{'bg-gradient-to-r from-green-600 to-green-800': link.selected, '': !link.selected}">
@@ -24,14 +24,14 @@
         </ul>
       </div>
       <div class="w-max -mb-3">
-        <a  class="group flex items-center space-x-4 rounded-md  px-[12px] py-3 text-gray-600">
+        <a  class="group flex items-center space-x-4 rounded-md  px-[12px] py-3 text-gray-600" (click)="logOut()">
           <svg xmlns="http://www.w3.org/2000/svg" class="h-5  mx-[20px] w-5 group-hover:fill-cyan-600" viewBox="0 0 20 20"
             fill="currentColor">
             <path fill-rule="evenodd"
               d="M11.49 3.17c-.38-1.56-2.6-1.56-2.98 0a1.532 1.532 0 01-2.286.948c-1.372-.836-2.942.734-2.106 2.106.54.886.061 2.042-.947 2.287-1.561.379-1.561 2.6 0 2.978a1.532 1.532 0 01.947 2.287c-.836 1.372.734 2.942 2.106 2.106a1.532 1.532 0 012.287.947c.379 1.561 2.6 1.561 2.978 0a1.533 1.533 0 012.287-.947c1.372.836 2.942-.734 2.106-2.106a1.533 1.533 0 01.947-2.287c1.561-.379 1.561-2.6 0-2.978a1.532 1.532 0 01-.947-2.287c.836-1.372-.734-2.942-2.106-2.106a1.532 1.532 0 01-2.287-.947zM10 13a3 3 0 100-6 3 3 0 000 6z"
               clip-rule="evenodd" />
           </svg>
-          <span class="group-hover:text-gray-700">Settings</span>
+          <span class="group-hover:text-gray-700">Exit</span>
         </a>
       </div>
     </div>
